<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayTaskFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <ImageView
            android:id="@+id/displayImportance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/display_importance"
            android:src="@drawable/circle_drawable_red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/displayTitle"
            android:layout_width="210dp"
            android:layout_height="30dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="24dp"
            android:text="@string/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.158"
            app:layout_constraintStart_toEndOf="@+id/displayImportance"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/displayEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_edit"
            android:contentDescription="@string/display_edit_button"
            app:layout_constraintBottom_toTopOf="@+id/displayDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.396"
            app:layout_constraintStart_toEndOf="@+id/displayTitle"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/displayDescription"
            android:layout_width="348dp"
            android:layout_height="511dp"
            android:text="@string/textview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.387"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/displayTitle"
            app:layout_constraintVertical_bias="0.189" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>